welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
		for(i <- 1 to 6)
                      ^Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
	if(vuBiscuit == false)
        ^